Corregido multiples clases eliminando el codigo css no necesarioeliminando lineas de codigo del archivo css de la aplicacion. Entre los corregidos se encuentran las cards, los chips, las cakes, los loaders y los botones. Hay que documentar ahora la utilizacion del framework desde la liberacion de las cr lists, luego se debe de proseguir con los dropdowns, menubar y tables para lanzar un demo y alpha de Crown

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -5,10 +5,14 @@ button.cr.button
 	border: none
 	line-height: 2.0rem
 	overflow: hidden
-
+	i 
+		transition: color 0.3s ease-out 
 div.cr.button 
 	overflow: hidden 
 	min-width: 30px
+	box-sizing: border-box
+	i 
+		transition: color 0.3s ease-out
 	
 .cr.button
 	background: #F5F5F5
@@ -36,6 +40,24 @@ div.cr.button
 	cursor: pointer
 	height: 2.2rem
 
+
+
+.cr.button.icon
+	height: auto  
+	div.i-label 
+		position: relative
+		float: right
+		display: inline-block
+		white-space: nowrap 
+		transform: translateY(5px)
+		i 
+			position: relative 
+			right: -10px
+
+
+
+
+
 .cr.button.plain
 	border-radius: 0 !important
 
@@ -43,7 +65,10 @@ div.cr.button
 	border-radius: $button-radius
 	
 .cr.button
-	transition: background-color 0.3s
+	-ms-transition: background 0.3s ease-out, box-shadow 0.3s ease-out !important 
+	-moz-transition: background 0.3s ease-out, box-shadow 0.3s ease-out !important 
+	-webkit-transition: background 0.3s ease-out, box-shadow 0.3s ease-out !important 
+	transition: background 0.3s, box-shadow 0.3s ease-out !important 
 	&:active
 		background: rgba(0,0,0,0.2)
 
@@ -69,7 +94,6 @@ div.cr.button
 	-webkit-transition: box-shadow 0.3s
 	-moz-transition: box-shadow 0.3s
 	-o-transition: box-shadow 0.3s
-	transition: box-shadow 0.3s
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
 
 .cr.button.raised
@@ -77,12 +101,8 @@ div.cr.button
 		box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0, 0.12), 0 5px 5px -3px rgba(0,0,0, 0.4)
 
 .cr.button.hoverable
-	-o-transition: box-shadow 0.3s
-	-moz-transition: background 0.3s, box-shadow 0.2s
-	-webkit-transition: background 0.3s,box-shadow 0.2s
-	transition: background 0.3s,box-shadow 0.3s
 	&:hover
-		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .3)
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .3)
 /* --------------------------------------- OUTLINED BUTTONS --------------------------------------------------*/
 .cr.button.outline
 	background: none 
@@ -370,7 +390,6 @@ div.cr.button
 .cr.simple.button 
 	color: lighten($black, 10)
 	background: none !important
-	transition: background 0.3s !important
 	.ripple 
 		background: $gray
 	&:active 
@@ -401,7 +420,6 @@ div.cr.button
 
 .cr.simple.button.indigo 
 	color: $indigo
-	transition: background-color 0.3s 
 	.ripple 
 		background: $indigo
 
@@ -545,12 +563,19 @@ div.cr.button.pulse, button.cr.button.pulse
 	height: 0
 	border-radius: 50%
 	background: rgba($white, .5)
+
+	-webkit-transform: scale(0)
+	-ms-transform: scale(0)
 	transform: scale(0)
+
 	position: absolute 
 	opacity: 1
 
 .ripple-active 
-	animation: ripple-anim .4s linear 
+	-webkit-animation: ripple-anim .5s linear
+	-ms-animation: ripple-anim .5s linear 
+	-moz-animation: ripple-anim .5s linear 
+	animation: ripple-anim .5s linear 
 
 
 @-o-keyframes ripple-anim
