--- a/Css/Sass/cards.sass
+++ b/Css/Sass/cards.sass
@@ -1,28 +1,25 @@
 @import 'variables'
 div.cr.card
 	position: relative 
-
 	box-shadow: 0 2px 4px 0 rgba($black, .2)
 	transition: box-shadow 0.3s
 	height: auto
-	
 	width: 25.0rem
-	border-radius: 2px
-	margin: 10px auto 
-
+	border-radius: 4px
+	margin: 5px 5px 5px 5px 
 	min-width: 12.0rem
 	font-size: 16px
 	z-index: 1
-
 	&:hover 
 		box-shadow: 0  4px 10px 0 rgba($black, .2)
 
 	.card-head
 		text-align: center
-		border-top-right-radius: 2px 
-		border-top-left-radius: 2px
+		border-top-right-radius: 4px 
+		border-top-left-radius: 4px
 		border-bottom-right-radius: none 
 		border-bottom-left-radius: none 
+		box-sizing: border-box
 		height: auto
 		font-weight: bold
 		position: relative 
@@ -100,7 +97,8 @@ div.cr.card
 	.card-body
 		height: auto 
 		overflow: auto 
-		position: static
+		box-sizing: border-box
+		position: relative
 		padding: 15px 15px 15px 15px
 		font-size: 16px
 		background: $white
@@ -145,36 +143,20 @@ div.cr.card
 
 
 	.card-footer
-		position: static
-		top: auto
-		left: 0
-		right: 0
-		bottom: 4px
+		position: relative
+		box-sizing: border-box
+		width: 100% 
 		height: auto
-		padding: 10px 8px 
-		text-align: center
-		align-content: center 
+		padding: 10px 5px 10px 5px 
 		font-weight: bold
 		color: lighten($black, 30)
-
 		font-size: 16px
 		border-top-right-radius: none 
 		border-top-left-radius: none 
-		border-bottom-left-radius: 2px
-		border-bottom-right-radius: 2px
+		border-bottom-left-radius: 4px
+		border-bottom-right-radius: 4px
 		color: lighten($black, 30)
-		overflow: hidden
-		// display: block
-		div.cr.button 
-			box-sizing: border-box 
-			text-align: center !important 
-			align-self: center !important 
-		button.cr.button 
-			text-align: center !important
-			align-self: center !important  
-
-
-
+		overflow: hidden  
 
 	.card-footer.blue 
 		background: $blue 
@@ -211,8 +193,8 @@ div.cr.card.no-footer
 	.card-footer
 		display: none !important 
 	.card-body
-		border-bottom-left-radius: 2px 
-		border-bottom-right-radius: 2px
+		border-bottom-left-radius: 4px 
+		border-bottom-right-radius: 4px
 		padding-bottom: 25px !important  
 	
 
@@ -247,8 +229,8 @@ div.cr.card.dark-bg
 
 div.cake
 	position: relative 
-	width: 300px 
-	height: 300px 
+	width: 250px 
+	height: 250px  
 	transform: scale(0.3)
 	box-shadow: 0 4px 8px rgba($gray, .6)
 	border-radius: 50% 
@@ -258,20 +240,10 @@ div.cake
 	z-index: 2 
 	background: darken($white, .4)
 	background: $blue 
-	
-	// &:before 
-	// 	content: ''
-	// 	background: rgba($blue, 4)
-	// 	width: 300px 
-	// 	height: 300px 
-	// 	box-sizing: border-box 
-	// 	border-radius: 50% 
-	// 	position: absolute
-	// 	top: 0 
-	// 	left: 0
-	// 	transform: scale(0)
-
-
+	&:active:hover
+		transform: scale(10)
+		div.content 
+			opacity: 0
 
 	div.content 
 		color: $white 
@@ -279,13 +251,12 @@ div.cake
 		opacity: 0
 		display: flex
 		align-self: center
-		padding: 30% 0
 		transition: transform 0.5s ease-out, opacity 0.5s ease-out
+
 	&:hover 
 		transform: scale(1)
 		background: darken($blue, 20)
 		z-index: 100
-
 		div.content 
 			transform: scale(0.7) 
 			opacity: 1
@@ -312,20 +283,6 @@ div.cake
 		> i 
 			transform: rotate(180deg)
 			opacity: 0
-
-
-	
-// span.cake-pulse
-// 	&:before 
-// 		content: ''
-// 		background: rgba($blue, 4)
-// 		width: 300px 
-// 		height: 300px 
-// 		border-radius: 50% 
-// 		position: absolute
-// 		top: 0 
-// 		left: 0
-// 		transform: scale(1)
 
 div.cake.red 
 	background: $red
