--- a/Css/Sass/loaders.sass
+++ b/Css/Sass/loaders.sass
@@ -158,6 +158,9 @@ div.load-shadow
 	width: 42px
 	border-radius: 50% 
 	filter: blur(5px)
+	-webkit-animation: growShadow 2s infinite ease-in-out 
+	-moz-animation: growShadow 2s infinite ease-in-out 
+	-o-animation: growShadow 2s infinite ease-in-out
 	animation: growShadow 2s infinite ease-in-out
 
 
@@ -182,6 +185,9 @@ div.cr.loader.screen.dots
 	z-index: 201
 	left: 46% 
 	top: 40%
+	-webkit-animation: fadeIn 0.3s ease-out 
+	-moz-animation: fadeIn 0.3s ease-out 
+	-o-animation: fadeIn 0.3s ease-out 
 	animation: fadeIn 0.3s ease-out 
 	div.dot
 		width: 20px 
