--- a/Css/Sass/checkbox.sass
+++ b/Css/Sass/checkbox.sass
@@ -18,7 +18,6 @@ div.cr.checkbox
 			-webkit-transition: background 0.3s ease-out, border-color 0.5s ease-out
 			-moz-transition: background 0.3s ease-out, border-color 0.5s ease-out
 			-o-transition: background 0.3s ease-out, border-color 0.5s ease-out
-			-ms-transition: background 0.3s ease-out, border-color 0.5s ease-out
 			transition: background 0.3s ease-out, border-color 0.5s ease-out
 			top: 0
 			left: 0
@@ -30,6 +29,9 @@ div.cr.checkbox
 			box-sizing: border-box
 			position: absolute
 			top: 0 
+			-webkit-transition: transform 0.5s ease-out
+			-moz-transition: transform 0.5s ease-out
+			-o-transition: transform 0.5s ease-out
 			transition: transform 0.5s ease-out
 
 
@@ -51,6 +53,7 @@ div.cr.checkbox
 				&:after 
 					content: ''
 					-webkit-transform: scale(-45deg)
+					-moz-transform: scale(-45deg) 
 					-ms-transform: scale(-45deg)
 					transform: rotate(-45deg)
 					top: 22%
@@ -81,9 +84,16 @@ div.checkbox.pulse
 			width: 20px 
 			height: 20px
 			border-radius: 100% 
-			background: rgba($accent, .4) 
+			background: rgba($accent, .4)
+			-webkit-transition: transform 0.2s ease-out, opacity 0.4s ease-out
+			-moz-transition: transform 0.2s ease-out, opacity 0.4s ease-out
+			-o-transition: transform 0.2s ease-out, opacity 0.4s ease-out
 			transition: transform 0.2s ease-out, opacity 0.4s ease-out
+			
+			-webkit-transform: scale(0)
+			-ms-transform: scale(0)
 			transform: scale(0)
+
 
 	input[type="checkbox"]
 		&:checked
@@ -103,6 +113,7 @@ div.cr.checkbox.variant
 					transition: transform 0.3s ease-in-out
 					height: 10px
 					-webkit-transform: rotate(-405deg)
+					-moz-transform: rotate(-405deg)
 					-ms-transform: rotate(-405deg)
 					transform: rotate(-405deg)
 					border-top: none !important 
@@ -117,6 +128,9 @@ div.cr.checkbox.variant
 			+ label 
 				&:before 
 					border: 1.5px solid $gray
+					-webkit-transition: transform 0.3s ease-out
+					-moz-transition: transform 0.3s ease-out 
+					-o-transition: transform 0.3s ease-out 
 					transition: transform 0.3s ease-out
 
 
@@ -219,7 +233,8 @@ div.cr.radio-button.pulse
 			transform: scale(0)
 
 			-webkit-transition: transform 0.4s ease-out, opacity 0.6s ease-out
-			-ms-transition: transform 0.4s ease-out, opacity 0.6s ease-out
+			-moz-transition: transform 0.4s ease-out, opacity 0.6s ease-out
+			-o-transition: transform 0.4s ease-out, opacity 0.6s ease-out
 			transition: transform 0.4s ease-out, opacity 0.6s ease-out
 	
 	input[type="radio"]
@@ -227,6 +242,7 @@ div.cr.radio-button.pulse
 			~ span.pulse
 				&:before  
 					-webkit-transform: scale(3)
+					-moz-transform: scale(3)
 					-ms-transform: scale(3)
 					transform: scale(3)
 					opacity: 0
