--- a/Css/Sass/modals.sass
+++ b/Css/Sass/modals.sass
@@ -9,6 +9,9 @@ div.cr.modal
     display: none 
     z-index: 200 
     overflow: hidden 
+    -webkit-transition: transform 0.4s ease-out, opacity 0.4s ease-out, border-color 0.6s ease-out
+    -moz-transition: transform 0.4s ease-out, opacity 0.4s ease-out, border-color 0.6s ease-out
+    -o-transition: transform 0.4s ease-out, opacity 0.4s ease-out, border-color 0.6s ease-out 
     transition: transform 0.4s ease-out, opacity 0.4s ease-out, border-color 0.6s ease-out
     box-shadow: 1px 1px 1px 1px rgba($gray, .3), -1px 1px 1px 1px rgba($gray, .3)
     background: darken($white, 1)
@@ -192,6 +195,9 @@ div.cr.modal
        
 
 div.cr.modal.opened 
+    -webkit-animation: appear 0.4s ease-in-out !important 
+    -moz-animation: appear 0.4s ease-in-out !important 
+    -o-animation: appear 0.4s ease-in-out !important 
     animation: appear 0.4s ease-in-out !important 
     display: block 
 
@@ -209,7 +215,8 @@ span.overlay
     opacity: 1
     background: rgba($black, 0.2)
     -webkit-animation: fadeIn 0.4s ease-in-out
-    -ms-animation: fadeIn 0.4s ease-in-out
+    -moz-animation: fadeIn 0.4s ease-in-out 
+    -o-animation: fadeIn 0.4s ease-in-out 
     animation: fadeIn 0.4s ease-in-out 
 
 span.overlay.hide 
