--- a/Css/Sass/transitions.sass
+++ b/Css/Sass/transitions.sass
@@ -12,7 +12,7 @@
         opacity: 1 !important
         transform: scale(1)
 
-@-ms-keyframes appear 
+@-o-keyframes appear 
     0% 
         display: none 
         opacity: 0
@@ -49,7 +49,7 @@
         transform: scale(1)
 
 
-@-ms-keyframes fadeIn 
+@-o-keyframes fadeIn 
     0%
         opacity: 0 
     100%
@@ -74,7 +74,7 @@
         opacity: 1 !important 
 
 
-@-ms-keyframes growAppear
+@-moz-keyframes growAppear
     from 
         opacity: 0.1 
         transform: scale(0)
@@ -112,7 +112,7 @@
         transform: scale(1)
 
 
-@-ms-keyframes grow 
+@-moz-keyframes grow 
     from 
         z-index: 0
         transform: scale(1)
@@ -143,7 +143,7 @@
     to 
         transform: rotate(360deg)
         
-@-ms-keyframes spin 
+@-moz-keyframes spin 
     from 
         transform: rotate(0deg)
     to 
@@ -169,7 +169,7 @@
         border-top: 5px solid $green
         transform: rotate(360deg)
 
-@-ms-keyframes spinColor
+@-moz-keyframes spinColor
     0% 
         border-top: 5px solid $green
         transform: rotate(0deg)        
@@ -224,7 +224,7 @@
         transform: scale(1) translateY(0)
         background: $red 
 
-@-ms-keyframes bouncy 
+@-moz-keyframes bouncy 
     0% 
         transform: scale(1) translateY(0)
         background: $red
@@ -245,7 +245,7 @@
     100% 
         transform: scale(1)
         
-@-ms-keyframes growShadow
+@-moz-keyframes growShadow
     0% 
         transform: scale(1)
     50% 
@@ -271,7 +271,7 @@
         transform: scaleX(0.5)
         left: 100%
         width: 100% 
-@-ms-keyframes 
+@-moz-keyframes 
     0% 
         left: -100% 
         width: 100%
@@ -303,7 +303,7 @@
         transform: scale(1.5)
 
 
-@-ms-keyframes pulse 
+@-moz-keyframes pulse 
     0% 
         -webkit-transform: scale(0)
         transform: scale(0)
@@ -328,7 +328,7 @@
     40%
         transform: scale(1)
 
-@-ms-keyframes dots 
+@-moz-keyframes dots 
     0%, 80%, 100% 
         transform: scale(0)
     40%
@@ -370,7 +370,7 @@
         -moz-transform: rotate(720deg) scale(0.8)
         transform: rotate(720deg) scale(0.8)
 
-@-ms-keyframes spinRotate
+@-o-keyframes spinRotate
     0% 
         -webkit-transform: rotate(0deg) scale(0.8)
         -moz-transform: rotate(0deg) scale(0.8)
@@ -411,7 +411,7 @@
         box-shadow: 30px 0 0 #f8b334
         margin-bottom: 10px 
 
-@-ms-keyframes ball1 
+@-moz-keyframes ball1 
     0% 
         box-shadow: 30px 0 0 #f8b334 
     50% 
@@ -445,7 +445,7 @@
         box-shadow: 30px 0 0 #4CAF50 
         margin-top: 0
 
-@-ms-keyframes ball2 
+@-moz-keyframes ball2 
     0% 
         box-shadow: 30px 0 0 #4CAF50
     50% 
