--- a/Css/Sass/cards.sass
+++ b/Css/Sass/cards.sass
@@ -2,6 +2,9 @@
 div.cr.card
 	position: relative 
 	box-shadow: 0 2px 4px 0 rgba($black, .2)
+	-webkit-transition: box-shadow 0.3s
+	-moz-transition: box-shadow 0.3s
+	-o-transition: box-shadow 0.3s
 	transition: box-shadow 0.3s
 	height: auto
 	width: 25.0rem
@@ -69,6 +72,9 @@ div.cr.card
 		img 
 			display: block 
 			align-content: center
+			-webkit-transtion: all 0.3s ease-out 
+			-moz-transition: all 0.3s ease-out
+			-o-transition: all 0.3s ease-out
 			transition: all 0.3s ease-out
 			margin: 0 auto
 			max-width: 100% 
@@ -81,6 +87,9 @@ div.cr.card
 			height: 100%
 			top: 0 
 			opacity: 0
+			-webkit-transition: opacity 0.3s ease-out 
+			-moz-transition: opacity 0.3s ease-out 
+			-o-transition: opacity 0.3s ease-out 
 			transition: opacity 0.3s ease-out
 			&:hover 
 				opacity: 1
@@ -234,6 +243,9 @@ div.cake
 	transform: scale(0.3)
 	box-shadow: 0 4px 8px rgba($gray, .6)
 	border-radius: 50% 
+	-webkit-transition: transform 0.5s ease-out, background 0.4s ease-out 
+	-moz-transition: transform 0.5s ease-out, background 0.4s ease-out
+	-o-transition: transform 0.5s ease-out, background 0.4s ease-out
 	transition: transform 0.5s ease-out, background 0.4s ease-out
 	overflow: hidden
 	text-align: center
@@ -241,6 +253,8 @@ div.cake
 	background: darken($white, .4)
 	background: $blue 
 	&:active:hover
+		-webkit-transform: scale(10)
+		-moz-transform: scale(10)
 		transform: scale(10)
 		div.content 
 			opacity: 0
@@ -251,10 +265,15 @@ div.cake
 		opacity: 0
 		display: flex
 		align-self: center
+		-webkit-transition: transform 0.5s ease-out, opacity 0.5s ease-out
+		-moz-transition: transform 0.5s ease-out, opacity 0.5s ease-out
+		-o-transition: transform 0.5s ease-out, opacity 0.5s ease-out
 		transition: transform 0.5s ease-out, opacity 0.5s ease-out
 
 	&:hover 
 		transform: scale(1)
+		-webkit-transform: scale(1)
+		-moz-transform: scale(1)
 		background: darken($blue, 20)
 		z-index: 100
 		div.content 
@@ -267,6 +286,9 @@ div.cake
 		left: 45% 
 		transform: scale(5)
 		color: $white
+		-webkit-transition: opacity 1s ease-out, transform 1s ease-out
+		-moz-transition: opacity 1s ease-out, transform 1s ease-out
+		-o-transition: opacity 1s ease-out, transform 1s ease-out
 		transition: opacity 1s ease-out, transform 1s ease-out
 	img 
 		position: absolute
@@ -274,6 +296,9 @@ div.cake
 		height: auto 
 		top: 0 
 		left: 0
+		-webkit-transition: opacity 0.7s ease-out
+		-moz-transition: opacity 0.7s ease-out
+		-o-transition: opacity 0.7s ease-out
 		transition: opacity 0.7s ease-out
 	img.fade 
 		&:hover 
@@ -281,6 +306,8 @@ div.cake
 
 	&:hover 
 		> i 
+			-webkit-transform: rotate(180deg)
+			-moz-transform: rotate(180deg)
 			transform: rotate(180deg)
 			opacity: 0
 
@@ -342,9 +369,13 @@ div.cake.pink
 
 @media screen and (max-width: 1000px)
 	div.cake
+		-webkit-transform: scale(0.7)
+		-moz-transform: scale(0.7)
 		transform: scale(0.7)
 		div.content 
 			opacity: 1
+			-webkit-transform: scale(0.6)
+			-moz-transform: scale(0.6)
 			transform: scale(0.6)
 		&:before 
 			display: none 
@@ -355,30 +386,48 @@ div.cake.pink
 		
 div.cake.shake-1
 	> i
+		-webkit-transform: none !important 
+		-moz-transform: none !important
 		transform: none !important
 		font-size: 109px !important
 		top: 32.3% 
 		left: 32.3%
+		-webkit-animation: shake 0.82s infinite ease-out
+		-moz-animation: shake 0.82s infinite ease-out 
+		-o-animation: shake 0.82s infinite ease-out
 		animation: shake 0.82s infinite ease-out
 
 div.cake.shake-2
 	&:hover 
 		> i 
+			-webkit-transform: none !important 
+			-moz-transform: none !important
 			transform: none !important
 			font-size: 109px !important
 			top: 32.3% 
 			left: 32.3%
+			-webkit-animation: shake 0.82s infinite ease-out
+			-moz-animation: shake 0.82s infinite ease-out 
+			-o-animation: shake 0.82s infinite ease-out
 			animation: shake 0.82s infinite ease-out
 
 
 @keyframes shake 
 	10%, 90%
+		-webkit-transform: translate3d(-1px, 0, 0)
+		-moz-transform: translate3d(-1px, 0, 0)
 		transform: translate3d(-1px, 0, 0)
 	20%, 80% 
+		-webkit-transform: translate3d(2px,0, 0)
+		-moz-transform: translate3d(2px, 0, 0)
 		transform: translate3d(2px, 0, 0)
 	30%, 50%, 70%
+		-webkit-transform: translate3d(-4px, 0, 0)
+		-moz-transform: translate3d(-4px, 0, 0)
 		transform: translate3d(-4px, 0, 0)
 	40%, 60%
+		-webkit-transform: translate3d(4px, 0, 0)
+		-moz-transform: translate3d(4px, 0, 0)
 		transform: translate3d(4px, 0, 0)
 
 
